--- a/package.json
+++ b/package.json
@@ -14,9 +14,15 @@
     "@types/react-dom": "18.2.4",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "mysql2": "^3.3.3",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sequelize": "^6.31.1",
+    "sequelize-typescript": "^2.1.5",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/sequelize": "^4.28.15"
   }
 }
