--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "framer-motion": "^10.12.16",
+    "moment": "^2.29.4",
     "mysql2": "^3.3.3",
     "next": "13.4.3",
     "next-auth": "^4.22.1",
@@ -27,6 +28,7 @@
     "react-icons": "^4.9.0",
     "react-scroll-motion": "^0.3.2",
     "react-scroll-parallax": "^3.4.2",
+    "react-toastify": "^9.1.3",
     "sequelize": "^6.31.1",
     "sequelize-typescript": "^2.1.5",
     "swr": "^2.1.5",
