--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.2.4",
     "antd": "^5.5.1",
     "axios": "^1.4.0",
+    "chart.js": "^4.3.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "framer-motion": "^10.12.16",
@@ -24,10 +25,15 @@
     "next": "13.4.3",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
+    "react-fast-marquee": "^1.6.0",
     "react-icons": "^4.9.0",
     "react-scroll-motion": "^0.3.2",
     "react-scroll-parallax": "^3.4.2",
+    "react-share": "^4.4.1",
+    "react-to-print": "^2.14.13",
     "react-toastify": "^9.1.3",
     "sequelize": "^6.31.1",
     "sequelize-typescript": "^2.1.5",
